# MarvelEngine

./: .gitignore  CMakeLists.txt  README.md  build_make.sh  build_mingw_make.bat  build_vs2017.bat  build_xcode.sh
Source/: GameCodeApp.cpp  GameCodeApp.h  MarvelEngine.aps  MarvelEngine.cpp  MarvelEngine.h  MarvelEngine.rc  MarvelEngine.sln  MarvelEngine.vcxproj  MarvelEngine.vcxproj.filters  Resource.h  Utilities.cpp  Utilities.h  main.cpp  stdafx.h
Source/Actors/: Actor.h  ActorFactory.h
Source/Components/: Actor.h  RenderableActor.h
Source/Debug/MarvelEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MarvelEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Source/Engine/: Camera.cpp  Camera.h  Engine.vcxproj  Engine.vcxproj.filters  Object.cpp  Object.h  Shader.cpp  Shader.h  Utilities.h  main.cpp  stdafx.h
Source/Engine/shaders/: shader.frag  shader.vert
